--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     }
   },
   "require": {
-    "amulen/nps-bundle": "^0.1"
+    "amulen/nps-bundle": "^0.1",
+    "mercadopago/sdk": "0.5.2"
   }
 }
