Inicio de creacion de planes en paypal

--- a/src/Amulen/PaymentBundle/Resources/config/services.yml
+++ b/src/Amulen/PaymentBundle/Resources/config/services.yml
@@ -74,4 +74,7 @@ services:
         arguments:
           - "@doctrine.orm.entity_manager"
           - "@service_container"
+          - "@router"
+          - "@logger"
+          - "@amulen.dashboard.service.setting"
           
